# RAG-

./: .gitignore  README.md  SYSTEM_PROMPT.py  main.py  pyproject.toml
RAG_learning/: 01提示词模板.py  02chain的基础使用.py  03简单的Runnable接口.py  04 字符串输出解析器.py  05JsonOutputParser字符串输出解析器.py  06自定义函数加入链.py  07临时会话记忆.py  08长期会话记忆.py  09CSV_Loader.py  10JSON_loader.py  11pyPDFloader.py  12vectorstore.py  13基于向量检索构建提示词.py  14runnablePassThrough的使用.py
RAG_learning/data/: stu.csv  stu.json  stus.json  stus_json_lines.json
RAG_learning/vectorstore/: chroma.sqlite3
RAG_project/: app_file_upload.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  md5.text  rag.py  vectors_stores.py
RAG_project/chroma_db/: chroma.sqlite3
